mirror/second-mlagent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mlagent
    app: keyrock
    version: v2
  name: mlagent
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keyrock
      app: keyrock
      version: v2
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/default: "true"
        io.kompose.service: keyrock
        app: keyrock
        version: v2
    spec:
      containers:
        - env:
            - name: DEBUG
              value: idm:*
            - name: IDM_ADMIN_EMAIL
              value: admin@test.com
            - name: IDM_ADMIN_PASS
              value: "1234"
            - name: IDM_ADMIN_USER
              value: admin
            - name: IDM_DB_HOST
              value: mysql
            - name: IDM_DB_PASS
              value: secret
            - name: IDM_DB_USER
              value: root
            - name: IDM_EMAIL_HOST
              value: mailer
            - name: IDM_EMAIL_PORT
              value: "25"
            - name: IDM_HOST
              value: http://localhost:3000
            - name: IDM_PORT
              value: "3000"
          image: fiware/idm:7.6.0
          name: mlagent-keyrock
          ports:
            - containerPort: 3000
            - containerPort: 443
          resources: {}
      hostname: keyrock
      restartPolicy: Always
status: {}
