mirror/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keyrock
spec:
  hosts:
    - keyrock
  http:
  - route:
    - destination:
        host: keyrock
        subset: v2
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: keyrock
spec:
  host: keyrock
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
